tests/src/frontend/typechecking/exhaustiveness/invalid/tuple_nested_boolean1.sk
fun test(): String {
  (true, true) match {
  | (true, true) -> "Fail\n"
  | (false, true) -> "Bad\n"
  | (false, false) -> "Bad\n"
  }
}
